fix(styles): set color-scheme & remove scrollbar styles

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,5 @@
-@mixin lightVariables {
+@mixin light {
+  color-scheme: light;
   --text-color: theme("colors.dark.4");
   --bg-color: theme("colors.light.3");
   --card-color: theme("colors.light.1");
@@ -12,7 +13,8 @@
   --nested-color: theme("colors.gray.0");
 }
 
-@mixin darkVariables {
+@mixin dark {
+  color-scheme: dark;
   --text-color: theme("colors.light.2");
   --bg-color: theme("colors.dark.9");
   --card-color: theme("colors.dark.5");
